--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav li a{
   color: #fff;
 }
 
-header img{
+#profile-pic{
   position:relative;
   top: 100px;
   border-radius: 100%;
@@ -47,12 +47,18 @@ header h1{
   display: inline-block;
 }
 
+#logos{
+  background-color: hsl(210, 30%, 75%);
+  opacity: 0.75;
+  padding-bottom: 10px;
+}
+
 body{
-  background-color: hsl(210, 30%, 90%); 
+  background-color: hsl(210, 30%, 75%); 
 }
 
 main {
-  top: 20px;
+  top: 40px;
   position: relative;
   max-width: 1000px;
   margin: 0 auto;
@@ -60,6 +66,7 @@ main {
 
 main h2 {
   margin-bottom: 10px;
+  margin-top: 20px;
   clear:left;
 }
 
@@ -85,11 +92,26 @@ p{
     text-justify: inter-word;
     font-kerning: normal;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
-cite ol {
+ol {
     list-style-position: inside;
     margin: 10px;
 }
 
+.card {
+  background-color:hsl(210, 30%, 75%); 
+}
+
+footer{
+  margin-top: 100px;
+  border: solid;
+  border-color: #334e5f;
+  text-align: center;
+}
+
+footer li {
+  display: inline-block;
+  margin: 15px 20px;
+}
